# Consumindo-API-do-Twitter-com-Python

./: README.md  pyproject.toml
MONGO-TEST/: .editorconfig  docker-compose.yml  main.py  pyproject.toml
MONGO-TEST/src/: connection.py  constants.py  responses.py  secrets.py  services.py
