[tool.poetry]
name = "mongo-teste"
version = "1.0.0"
description = "teste"
authors = ["Cibele Domingos <cibeledaniel863@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.3"
tweepy = "^4.14.0"
pymongo = "^4.7.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
